[project]
name = "mazegen"
version = "1.0.0"
authors = [
  { name="Lauwerie Felix", email="flauweri@student.42lyon.fr" },
  { name="Girard Louis", email="lgirard@student.42lyon.fr" },
]
description = "Maze lib for A-Maze-Ing"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/B4nJuice/42-A-Maze-Ing"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mazegen"]

[[tool.mypy.overrides]]
module = "mlx"
ignore_missing_imports = false
